--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,8 @@
     "ember": "alpha",
     "ember-cli-shims": "0.1.1",
     "ember-qunit-notifications": "0.1.0"
+  },
+  "resolutions": {
+    "ember": "alpha"
   }
 }
